--- a/macOS/Frameworks/freetype.framework/Versions/A/Resources/Info.plist
+++ b/macOS/Frameworks/freetype.framework/Versions/A/Resources/Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20D91</string>
+	<string>21D49</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>FreeType</string>
+	<string>freetype</string>
 	<key>CFBundleGetInfoString</key>
 	<string>FreeType </string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>FreeType</string>
+	<string>freetype</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
@@ -25,19 +25,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12E262</string>
+	<string>13C100</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>11.3</string>
+	<string>12.1</string>
 	<key>DTSDKBuild</key>
-	<string>20E214</string>
+	<string>21C46</string>
 	<key>DTSDKName</key>
-	<string>macosx11.3</string>
+	<string>macosx12.1</string>
 	<key>DTXcode</key>
-	<string>1250</string>
+	<string>1321</string>
 	<key>DTXcodeBuild</key>
-	<string>12E262</string>
+	<string>13C100</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.7</string>
 </dict>
