--- a/macOS/Frameworks/SDL2.framework/Versions/A/Resources/Info.plist
+++ b/macOS/Frameworks/SDL2.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21C52</string>
+	<string>21G725</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -19,7 +19,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.19</string>
+	<string>2.28.5</string>
 	<key>CFBundleSignature</key>
 	<string>SDLX</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -27,24 +27,24 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0.19</string>
+	<string>2.28.5</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13C100</string>
+	<string>14C18</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.1</string>
+	<string>13.1</string>
 	<key>DTSDKBuild</key>
-	<string>21C46</string>
+	<string>22C55</string>
 	<key>DTSDKName</key>
-	<string>macosx12.1</string>
+	<string>macosx13.1</string>
 	<key>DTXcode</key>
-	<string>1321</string>
+	<string>1420</string>
 	<key>DTXcodeBuild</key>
-	<string>13C100</string>
+	<string>14C18</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.7</string>
+	<string>10.9</string>
 </dict>
 </plist>
